added cmake build option for examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.0)
 project(serial VERSION 0.1)
 
 set(CMAKE_CXX_STANDARD 17)
+set(BUILD_EXAMPLES ON)
 
 set( serial_SOURCES
   src/Serial.cc
@@ -14,6 +15,12 @@ target_include_directories(serial PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
   )
+
+
+if (BUILD_EXAMPLES)
+  add_executable(test examples/test.cc)
+  target_link_libraries(test PUBLIC serial)
+endif()
 
 # TODO: Setup the install interface
 install(TARGETS serial
